feat: new translation repository and a use example

--- a/src/app/auth/ui/pages/login/login.page.html
+++ b/src/app/auth/ui/pages/login/login.page.html
@@ -1,2 +1,5 @@
 <p>Login Page</p>
 <p>{{ 'shared.example' | translate }}</p>
+
+<button (click)="changeLang(LanguagesConstants.EN)">Change English</button>
+<button (click)="changeLang(LanguagesConstants.ES)">Cambiar Español</button>
