feat: language menu to change app language

--- a/src/app/auth/ui/pages/login/login.page.html
+++ b/src/app/auth/ui/pages/login/login.page.html
@@ -1,3 +1,11 @@
+<div id="app-login-hero-banner">
+	<h1>{{ 'auth.hero-banner.title' | translate }}</h1>
+	<h2>{{ 'auth.hero-banner.subtitle' | translate }}</h2>
+</div>
+<div>
+
+</div>
+
 <p>Login Page</p>
 <p>{{ 'shared.example' | translate }}</p>
 
