--- a/src/app/shared/ui/atoms/buttons/icon-button/icon-button.atom.html
+++ b/src/app/shared/ui/atoms/buttons/icon-button/icon-button.atom.html
@@ -1,3 +1,4 @@
-<button mat-icon-button >
+<button mat-icon-button>
 	<mat-icon [ngClass]="color">{{ icon() }}</mat-icon>
+	<ng-content/>
 </button>
