--- a/src/app/auth/ui/pages/login/login.page.scss
+++ b/src/app/auth/ui/pages/login/login.page.scss
@@ -1,1 +1,36 @@
-/* Login */
+#app-login-hero-banner {
+	height: 400px;
+	box-sizing: border-box;
+	padding: 15px;
+	background-color: var(--mat-sys-primary-container);
+	color: var(--mat-sys-on-primary-container);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: column;
+	position: relative;
+	text-align: center;
+	z-index: 1;
+
+	h1 {
+		font-size: 3rem;
+		line-height: 2.5rem;
+	}
+
+	h2 {
+		font-weight: normal;
+	}
+}
+
+#app-login-hero-banner:before {
+	content: "";
+	position: absolute;
+	top: -20%;
+	right: 20%;
+	width: 500px;
+	height: 500px;
+	background: url(#{"/images/icon.png"}) no-repeat center;
+	background-size: contain;
+	z-index: -1;
+	opacity: 0.7;
+}
