--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,4 +42,10 @@ body {
 
 html, body {
 	height: 100%;
+	overflow: visible;
+	position: relative;
+}
+
+button, input {
+	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
